--- a/ctests/testinputs/Makefile
+++ b/ctests/testinputs/Makefile
@@ -1,4 +1,7 @@
 
-
 threads: threads.c
+	$(CC) $(CFLAGS) $(INCLUDE_DIRS) $< -o $@ -lpthread
+
+
+mutexthreads: mutexthreads.c
 	$(CC) $(CFLAGS) $(INCLUDE_DIRS) $< -o $@ -lpthread
