attempt at lock call instrumentation

--- a/ctests/testinputs/Makefile
+++ b/ctests/testinputs/Makefile
@@ -1,5 +1,9 @@
+CFLAGS= -g
 
 all: threads mutexthreads
+
+clean:
+	rm -f threads mutexthreads
 
 threads: threads.c
 	$(CC) $(CFLAGS) $(INCLUDE_DIRS) $< -o $@ -lpthread
