--- a/ctests/testinputs/Makefile
+++ b/ctests/testinputs/Makefile
@@ -1,9 +1,12 @@
 CFLAGS= -g
+VEXDIR= /home/giovanni/vexjine/src/vex
+CINELIB = /home/giovanni/cine/lib
+CINEINC = /home/giovanni/cine/profiler/h
 
-all: threads mutexthreads
+all: threads mutexthreads vexmutexthreads
 
 clean:
-	rm -f threads mutexthreads
+	rm -f threads mutexthreads vexmutexthreads
 
 threads: threads.c
 	$(CC) $(CFLAGS) $(INCLUDE_DIRS) $< -o $@ -lpthread
@@ -11,3 +14,6 @@ threads: threads.c
 
 mutexthreads: mutexthreads.c
 	$(CC) $(CFLAGS) $(INCLUDE_DIRS) $< -o $@ -lpthread
+
+vexmutexthreads: vexmutexthreads.cpp
+	$(CXX) $(CXXFLAGS) -L$(CINELIB) -I$(CINEINC) $< -o $@ -lcine -lpthread 
