--- a/ctests/vextests/Makefile
+++ b/ctests/vextests/Makefile
@@ -3,10 +3,13 @@ VEXDIR= /home/giovanni/vexjine/src/vex
 CINELIB = /home/giovanni/cine/lib
 CINEINC = /home/giovanni/cine/profiler/h
 
-all: JoinTest.o
+all: JoinTest.o TimersTest.o
 
 clean:
-	rm -f JoinTest.o
+	rm -f JoinTest.o TimersTest.o
 
 JoinTest.o: JoinTest.cpp
 	$(CXX) $(CXXFLAGS) $< -o $@ -lpthread 
+
+TimersTest.o: TimersTest.cpp
+	$(CXX) $(CXXFLAGS) $< -o $@
