--- a/ctests/vextests/Makefile
+++ b/ctests/vextests/Makefile
@@ -3,13 +3,17 @@ VEXDIR= /home/giovanni/vexjine/src/vex
 CINELIB = /home/giovanni/cine/lib
 CINEINC = /home/giovanni/cine/profiler/h
 
-all: JoinTest.o TimersTest.o
+all: JoinTest.o TimersTest.o AccelTest.o
 
 clean:
-	rm -f JoinTest.o TimersTest.o
+	rm -f JoinTest.o TimersTest.o AccelTest.o
 
 JoinTest.o: JoinTest.cpp
 	$(CXX) $(CXXFLAGS) $< -o $@ -lpthread 
 
 TimersTest.o: TimersTest.cpp
 	$(CXX) $(CXXFLAGS) $< -o $@
+
+AccelTest.o: AccelTest.cpp
+	$(CXX) $(CXXFLAGS) $< -o $@ -lpthread 
+
